setPosition now computes values dynamically based on card dimensions, and text is now processed differently for read vs write modes to keep spacing consistent between them, and in setupLinks the fit() method is called on the graph renderer in an attempt to prevent nodes from straying off the canvas tho it is only partially effective

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,11 +6,12 @@
 
 #container {
   position: relative;
+  padding: 3em;
 }
 
 #graph-container {
-  width: 100%;
-  height: 100vh;
+  width: 95%;
+  height: 80vh;
   border: 0;
 }
 
